# KT2

./: Cargo.toml  README.md
benches/: d3_benchmarks.rs  kt2_benchmarks.rs
src/: aes.rs  fips202.rs  id.rs  kt2.rs  lib.rs  packing.rs  params.rs  poly.rs  polyvec.rs  rounding.rs  sign.rs
