[package]
name = "kt2"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
description = "KeyTree2 (KT2) is a 2nd generation, quantum-resistant cryptographic library used for Atlas' Data Access Layer"
readme = "README.md"
repository = "https://github.com/valeralabs/kt2"
keywords = ["cryptography", "quantum", "dilithium", "digital-signatures", "security"]
categories = ["cryptography", "post-quantum-cryptography"]

[dependencies]
blake3 = "1.4.1"
bs58 = "0.5.0"
hardlight = { version = "2.0.0", git = "https://github.com/valeralabs/hardlight"}
rand = "0.7.3"
ring = "0.16.20"
safe_pqc_kyber = { version = "0.6.1", features = ["kyber768", "std", "rand", "zeroize"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "kt2_benchmarks"
harness = false
