[package]
name = "kt2"
version = "1.1.1"
edition = "2021"
license = "GPL-3.0"
description = "KeyTree2 (KT2) is a 2nd generation, quantum-resistant cryptographic library used for Atlas' Data Access Layer"
readme = "README.md"
repository = "https://github.com/valeralabs/kt2"
keywords = ["cryptography", "quantum", "dilithium", "digital-signatures", "security"]
categories = ["cryptography", "post-quantum-cryptography"]

[dependencies]
blake3 = "1.4.1"
bs58 = "0.5.0"
rand = "0.7.3"
ring = "0.16.20"
rkyv = { version = "0.7.42", features = ["validation", "copy", "archive_le"] }
safe_pqc_kyber = { version = "0.6.1", features = ["kyber768", "std", "rand", "zeroize"] }
secrecy = "0.8.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "kt2_benchmarks"
harness = false
